// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSeriesViewerSites PositionDetail Renders full detail when position history is present 1`] = `
<div
  className="makeStyles-startFlex-80"
  style={
    {
      "alignItems": "center",
      "justifyContent": "space-between",
    }
  }
>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <div
      className="makeStyles-startFlex-80"
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <div
        style={
          {
            "marginRight": "24px",
          }
        }
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          style={
            {
              "fontWeight": 600,
            }
          }
        >
          000.010
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          style={
            {
              "color": "#565a5c",
            }
          }
        >
          Elevation:
        </p>
        <div
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="TerrainIcon"
            focusable="false"
            style={
              {
                "color": "#565a5c",
                "marginRight": "4px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="m14 6-3.75 5 2.85 3.8-1.6 1.2C9.81 13.75 7 10 7 10l-6 8h22z"
            />
          </svg>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
            style={
              {
                "color": "#565a5c",
              }
            }
          >
            991.00m
          </p>
        </div>
      </div>
      <div
        style={
          {
            "marginRight": "24px",
          }
        }
      >
        <p
          className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
        >
          <span
            style={
              {
                "fontWeight": 600,
                "marginRight": "8px",
              }
            }
          >
            x:
          </span>
          5m
          <br />
          <span
            style={
              {
                "fontWeight": 600,
                "marginRight": "8px",
              }
            }
          >
            y:
          </span>
          6m
          <br />
          <span
            style={
              {
                "fontWeight": 600,
                "marginRight": "8px",
              }
            }
          >
            z:
          </span>
          1m
        </p>
      </div>
    </div>
    <div
      style={
        {
          "marginRight": "24px",
          "marginTop": "4px",
        }
      }
    >
      <div>
        <p
          className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          style={
            {
              "fontWeight": 600,
            }
          }
        >
          Location:
        </p>
      </div>
      <div
        style={
          {
            "color": "#565a5c",
          }
        }
      >
        <p
          className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
        >
          N/A (N/A)
        </p>
      </div>
    </div>
  </div>
  <div
    style={
      {
        "textAlign": "right",
      }
    }
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="Click to show all changes to physical locations for this position over time"
      type="button"
    >
      <span
        className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="HistoryIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8z"
          />
        </svg>
      </span>
      History (2)
    </button>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites PositionDetail Renders full wide detail when position history is present 1`] = `
<div>
  <div
    className="makeStyles-startFlex-100"
    style={
      {
        "alignItems": "flex-end",
      }
    }
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
      style={
        {
          "fontWeight": 600,
          "marginRight": "24px",
        }
      }
    >
      000.010
    </p>
    <div
      className="makeStyles-startFlex-100"
      style={
        {
          "alignItems": "center",
          "color": "#565a5c",
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        Elevation:
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
        data-testid="TerrainIcon"
        focusable="false"
        style={
          {
            "margin": "0px 4px 0px 8px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="m14 6-3.75 5 2.85 3.8-1.6 1.2C9.81 13.75 7 10 7 10l-6 8h22z"
        />
      </svg>
      <p
        className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
      >
        991.00m
      </p>
    </div>
  </div>
  <div
    className="makeStyles-startFlex-100"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
    >
      <span
        style={
          {
            "fontWeight": 600,
            "marginRight": "8px",
          }
        }
      >
        x / y / z:
      </span>
      5m / 6m / 1m
    </p>
  </div>
  <div
    className="makeStyles-startFlex-100"
    style={
      {
        "color": "#565a5c",
        "marginRight": "24px",
        "marginTop": "4px",
      }
    }
  >
    <span
      className="MuiTypography-root MuiTypography-caption css-287k3z-MuiTypography-root"
    >
      <span
        style={
          {
            "fontWeight": 600,
          }
        }
      >
        Location: 
      </span>
      N/A (N/A)
    </span>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites PositionDetail Renders trimmed down detail when position not present in state 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
>
  000.010
</p>
`;

exports[`TimeSeriesViewerSites PositionHistoryButton Renders disabled when history has less than two entries 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
  disabled={true}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  title="This position has had no changes to physical locations since its creation"
  type="button"
>
  <span
    className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="HistoryIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8z"
      />
    </svg>
  </span>
  No History
</button>
`;

exports[`TimeSeriesViewerSites PositionHistoryButton Renders enabled when history has two or more entries 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  title="Click to show all changes to physical locations for this position over time"
  type="button"
>
  <span
    className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="HistoryIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9m-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8z"
      />
    </svg>
  </span>
  History (2)
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`TimeSeriesViewerSites SelectPositionsButton Renders as expected 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    {
      "marginLeft": "32px",
    }
  }
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="TouchAppIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74m9.84 4.63-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38"
      />
    </svg>
  </span>
  Select Positions…
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`TimeSeriesViewerSites SelectedPosition Renders as expected 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-119 css-s384l0-MuiPaper-root-MuiCard-root"
>
  <button
    aria-label="remove position 000.010 from ABBY"
    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      {
        "marginLeft": "8px",
        "marginRight": "8px",
      }
    }
    tabIndex={0}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
      data-testid="ClearIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <div
    style={
      {
        "flexGrow": 1,
      }
    }
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
    >
      000.010
    </p>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites SelectedSite Renders as expected (aquatic / core) 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-siteCard-210 css-s384l0-MuiPaper-root-MuiCard-root"
>
  <div>
    <div
      className="makeStyles-siteTitleContainer-211"
    >
      <img
        alt="Aquatic Core"
        height="32px"
        src="svg-file.svg"
        style={
          {
            "flexGrow": 0,
            "marginRight": "8px",
          }
        }
        title="Aquatic Core"
        width="32px"
      />
      <h6
        className="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
        style={
          {
            "flexGrow": 1,
            "lineHeight": "1.4rem",
          }
        }
      >
        Rio Cupeyes (CUPE)
      </h6>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "minWidth": "104px",
            "whiteSpace": "nowrap",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        Remove Site
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-siteDetailsRow-212"
    >
      <div
        className="makeStyles-siteDetailsColumn-213"
      >
        <div
          className="makeStyles-siteDetail-214"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Aquatic Core
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
            style={
              {
                "fontSize": "0.8rem",
              }
            }
          >
            <i>
              water-based; fixed location
            </i>
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-214"
        >
          <div
            className="makeStyles-startFlex-220"
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <button
              aria-label="Latitude / Longitude (click to copy)"
              aria-labelledby={null}
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                {
                  "marginRight": "4px",
                }
              }
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="MyLocationIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"
                />
              </svg>
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <span
              aria-label="Latitude / Longitude"
              className="MuiTypography-root MuiTypography-caption css-287k3z-MuiTypography-root"
              style={
                {
                  "fontFamily": "monospace",
                  "fontSize": "0.85rem",
                  "textAlign": "right",
                }
              }
            >
              18.11352
              <br />
              -66.98676
            </span>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-siteDetailsColumn-213"
      >
        <div
          className="makeStyles-siteDetail-214"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Territory
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            Puerto Rico
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-214"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Domain
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            D04 - Atlantic Neotropical
          </p>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-positionsTitleContainer-217"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Position(s)
      </h6>
      <button
        aria-label={null}
        aria-labelledby={null}
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element={true}
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "8px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "32px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="TouchAppIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74m9.84 4.63-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38"
            />
          </svg>
        </span>
        Select Positions…
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-positionsCardContainer-218"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-219 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.010 from CUPE"
          className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={-1}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.010
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites SelectedSite Renders as expected (aquatic / gradient) 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-siteCard-190 css-s384l0-MuiPaper-root-MuiCard-root"
>
  <div>
    <div
      className="makeStyles-siteTitleContainer-191"
    >
      <img
        alt="Aquatic Gradient"
        height="32px"
        src="svg-file.svg"
        style={
          {
            "flexGrow": 0,
            "marginRight": "8px",
          }
        }
        title="Aquatic Gradient"
        width="32px"
      />
      <h6
        className="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
        style={
          {
            "flexGrow": 1,
            "lineHeight": "1.4rem",
          }
        }
      >
        Upper Big Creek (BIGC)
      </h6>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "minWidth": "104px",
            "whiteSpace": "nowrap",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        Remove Site
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-siteDetailsRow-192"
    >
      <div
        className="makeStyles-siteDetailsColumn-193"
      >
        <div
          className="makeStyles-siteDetail-194"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Aquatic Gradient
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
            style={
              {
                "fontSize": "0.8rem",
              }
            }
          >
            <i>
              water-based; gradient location
            </i>
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-194"
        >
          <div
            className="makeStyles-startFlex-200"
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <button
              aria-label="Latitude / Longitude (click to copy)"
              aria-labelledby={null}
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                {
                  "marginRight": "4px",
                }
              }
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="MyLocationIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"
                />
              </svg>
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <span
              aria-label="Latitude / Longitude"
              className="MuiTypography-root MuiTypography-caption css-287k3z-MuiTypography-root"
              style={
                {
                  "fontFamily": "monospace",
                  "fontSize": "0.85rem",
                  "textAlign": "right",
                }
              }
            >
              37.059719
              <br />
              -119.257549
            </span>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-siteDetailsColumn-193"
      >
        <div
          className="makeStyles-siteDetail-194"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            State
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            California
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-194"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Domain
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            D17 - Pacific Southwest
          </p>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-positionsTitleContainer-197"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Position(s)
      </h6>
      <button
        aria-label={null}
        aria-labelledby={null}
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element={true}
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "8px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "32px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="TouchAppIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74m9.84 4.63-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38"
            />
          </svg>
        </span>
        Select Positions…
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-positionsCardContainer-198"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-199 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.030 from BIGC"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.030
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-199 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.010 from BIGC"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.010
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites SelectedSite Renders as expected (terrestrial / core) 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-siteCard-170 css-s384l0-MuiPaper-root-MuiCard-root"
>
  <div>
    <div
      className="makeStyles-siteTitleContainer-171"
    >
      <img
        alt="Terrestrial Core"
        height="32px"
        src="svg-file.svg"
        style={
          {
            "flexGrow": 0,
            "marginRight": "8px",
          }
        }
        title="Terrestrial Core"
        width="32px"
      />
      <h6
        className="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
        style={
          {
            "flexGrow": 1,
            "lineHeight": "1.4rem",
          }
        }
      >
        Central Plains Experimental Range (CPER)
      </h6>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "minWidth": "104px",
            "whiteSpace": "nowrap",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        Remove Site
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-siteDetailsRow-172"
    >
      <div
        className="makeStyles-siteDetailsColumn-173"
      >
        <div
          className="makeStyles-siteDetail-174"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Terrestrial Core
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
            style={
              {
                "fontSize": "0.8rem",
              }
            }
          >
            <i>
              land-based; fixed location
            </i>
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-174"
        >
          <div
            className="makeStyles-startFlex-180"
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <button
              aria-label="Latitude / Longitude (click to copy)"
              aria-labelledby={null}
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                {
                  "marginRight": "4px",
                }
              }
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="MyLocationIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"
                />
              </svg>
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <span
              aria-label="Latitude / Longitude"
              className="MuiTypography-root MuiTypography-caption css-287k3z-MuiTypography-root"
              style={
                {
                  "fontFamily": "monospace",
                  "fontSize": "0.85rem",
                  "textAlign": "right",
                }
              }
            >
              40.815536
              <br />
              -104.745591
            </span>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-siteDetailsColumn-173"
      >
        <div
          className="makeStyles-siteDetail-174"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            State
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            Colorado
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-174"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Domain
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            D10 - Central Plains
          </p>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-positionsTitleContainer-177"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Position(s)
      </h6>
      <button
        aria-label={null}
        aria-labelledby={null}
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element={true}
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "8px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "32px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="TouchAppIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74m9.84 4.63-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38"
            />
          </svg>
        </span>
        Select Positions…
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-positionsCardContainer-178"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-179 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.050 from CPER"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.050
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-179 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.040 from CPER"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.040
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites SelectedSite Renders as expected (terrestrial / gradient) 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-siteCard-150 css-s384l0-MuiPaper-root-MuiCard-root"
>
  <div>
    <div
      className="makeStyles-siteTitleContainer-151"
    >
      <img
        alt="Terrestrial Gradient"
        height="32px"
        src="svg-file.svg"
        style={
          {
            "flexGrow": 0,
            "marginRight": "8px",
          }
        }
        title="Terrestrial Gradient"
        width="32px"
      />
      <h6
        className="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
        style={
          {
            "flexGrow": 1,
            "lineHeight": "1.4rem",
          }
        }
      >
        Abby Road (ABBY)
      </h6>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "minWidth": "104px",
            "whiteSpace": "nowrap",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        Remove Site
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-siteDetailsRow-152"
    >
      <div
        className="makeStyles-siteDetailsColumn-153"
      >
        <div
          className="makeStyles-siteDetail-154"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Terrestrial Gradient
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
            style={
              {
                "fontSize": "0.8rem",
              }
            }
          >
            <i>
              land-based; gradient location
            </i>
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-154"
        >
          <div
            className="makeStyles-startFlex-160"
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <button
              aria-label="Latitude / Longitude (click to copy)"
              aria-labelledby={null}
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                {
                  "marginRight": "4px",
                }
              }
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="MyLocationIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"
                />
              </svg>
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <span
              aria-label="Latitude / Longitude"
              className="MuiTypography-root MuiTypography-caption css-287k3z-MuiTypography-root"
              style={
                {
                  "fontFamily": "monospace",
                  "fontSize": "0.85rem",
                  "textAlign": "right",
                }
              }
            >
              45.762439
              <br />
              -122.330317
            </span>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-siteDetailsColumn-153"
      >
        <div
          className="makeStyles-siteDetail-154"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            State
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            Washington
          </p>
        </div>
        <div
          className="makeStyles-siteDetail-154"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
          >
            Domain
          </h6>
          <p
            className="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
          >
            D16 - Pacific Northwest
          </p>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-positionsTitleContainer-157"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
      >
        Position(s)
      </h6>
      <button
        aria-label={null}
        aria-labelledby={null}
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element={true}
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "8px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "32px",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="TouchAppIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 11.24V7.5C9 6.12 10.12 5 11.5 5S14 6.12 14 7.5v3.74c1.21-.81 2-2.18 2-3.74C16 5.01 13.99 3 11.5 3S7 5.01 7 7.5c0 1.56.79 2.93 2 3.74m9.84 4.63-4.54-2.26c-.17-.07-.35-.11-.54-.11H13v-6c0-.83-.67-1.5-1.5-1.5S10 6.67 10 7.5v10.74c-3.6-.76-3.54-.75-3.67-.75-.31 0-.59.13-.79.33l-.79.8 4.94 4.94c.27.27.65.44 1.06.44h6.79c.75 0 1.33-.55 1.44-1.28l.75-5.27c.01-.07.02-.14.02-.2 0-.62-.38-1.16-.91-1.38"
            />
          </svg>
        </span>
        Select Positions…
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="makeStyles-positionsCardContainer-158"
    >
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-159 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.020 from ABBY"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.020
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root makeStyles-positionCard-159 css-s384l0-MuiPaper-root-MuiCard-root"
      >
        <button
          aria-label="remove position 000.010 from ABBY"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-1wx42p0-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            {
              "marginLeft": "8px",
              "marginRight": "8px",
            }
          }
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <div
          style={
            {
              "flexGrow": 1,
            }
          }
        >
          <p
            className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
          >
            000.010
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites SiteOption Renders as expected without stateCode 1`] = `
<div
  className="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters Mui-selected MuiMenuItem-root MuiMenuItem-gutters Mui-selected css-3ct007-MuiButtonBase-root-MuiMenuItem-root"
  id="bar"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  selected={true}
  style={
    {
      "alignItems": "flex-start",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "column",
    }
  }
  tabIndex={2}
>
  <div
    className="makeStyles-startFlex-140"
  >
    <img
      alt="Terrestrial Gradient"
      height="24px"
      src="svg-file.svg"
      style={
        {
          "flexGrow": 0,
          "marginRight": "12px",
          "marginTop": "4px",
        }
      }
      title="Terrestrial Gradient"
      width="24px"
    />
    <div
      style={
        {
          "flexGrow": 1,
        }
      }
    >
      <p
        className="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
      >
        ABBY - Abby Road, WA
      </p>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom makeStyles-optionSubtitle-128 css-14mry96-MuiTypography-root"
      >
        Terrestrial Gradient - Domain D16 (D16 Name) - Lat/Lon: 45.762439, -122.330317
      </p>
    </div>
  </div>
</div>
`;

exports[`TimeSeriesViewerSites SitesControl Renders as expected 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
  data-textField="bar"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-240dfl-MuiFormLabel-root-MuiInputLabel-root"
    data-shrink={false}
    htmlFor=":r3:"
    id=":r3:-label"
  >
    Add Sites
  </label>
  <div
    className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd css-unbnby-MuiInputBase-root-MuiOutlinedInput-root"
    onClick={[Function]}
  >
    <div
      aria-invalid={false}
      autoFocus={false}
      className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-7053f3-MuiInputBase-input-MuiOutlinedInput-input"
      data-inner="foo"
      disabled={false}
      id=":r3:"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      required={false}
      type="text"
    >
      <div>
        children
      </div>
    </div>
    <div
      className="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
        />
      </svg>
    </div>
    <fieldset
      aria-hidden={true}
      className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        className="css-yjsfm1"
      >
        <span>
          Add Sites
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
